# riscv-cycle-cpu

./: .gitignore  .gitmodules  CMakeLists.txt  alu_decoder.v  cosim.py  datapath.v  extend_unit.v  program.mem  top.v
pipelined/: CMakeLists.txt  adder.v  collect.py  controller.v  data_memory.v  datapath.v  instruction_memory.v  intermediate_register.v  main_decoder.v  mux3.v  regfile.v  riscvpipelined.v  testbench.v  top.v
pipelined/programs/: store_program.mem
pipelined/programs_txt/: load_use.mem  read_after_write.mem  srai.mem  stall.mem  store.mem
pipelined/rtl/: adder.v  alu.v  aludec.v  bypass.v  controller.v  datapath.v  dmem.v  extend.v  flopenr.v  flopr.v  hazard.v  imem.v  maindec.v  mux3.v  regfile.v  riscvpipelined.v  top.v
pipelined/sim/: loader.hpp  main.cpp  tracer.hpp
pipelined/tests/: setup.cfg  test_instructions.py  test_main.py  utils.py
programs/: 4-queens.32.nostd  8-queens.32.nostd  factorial  fib.32.nostd
programs_c/: 8-queens.c  factorial.c  fib.c
programs_txt/: bge.mem  branch.mem  igor.mem  load_use.mem  lui.mem  program.mem  slli.mem  xor.mem
rtl/: alu.v  alucontrol.v  aludec.v  controller.v  datapath.v  dmem.v  extend.v  hazard.v  igor_controller.v  imem.v  instr_opcodes.v  maindec.v  mux2.v  old_extend.v  regfile.v  riscvpipelined.v  top.v
sim/: loader.hpp  main.cpp
single-cycle/: alu.v  dump.vcd  flip_flop.v  flip_flop_en.v  instruction_memory.v  riscvsingle.v  single-cycle-riscv  testbench.v
